# genepy

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.circleci/: config.yml
cmake/: GenepyBuildType.cmake  GenepyCodeFormatter.cmake  GenepyCompiler.cmake  GenepyExternalTools.cmake  GenepyInstallConfig.cmake  GenepyPackage.cmake  GenepyParams.cmake  GenepyUtils.cmake  build_type.cmake  code_formatter.cmake  compiler.cmake  external_tools.cmake  install_config.cmake  package.cmake  params.cmake  utils.cmake
doc/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  main.cpp
include/genepy/: genepy_global.h  version.h
include/genepy/application/: ApplicationInformation.h  ApplicationPreferenceDirectory.h  ConsoleApplication.h  GuiApplication.h
include/genepy/cli/: CommandLineArgument.h  CommandLineArgument.ipp  CommandLineArgumentValue.h  CommandLineArgumentValue.ipp  CommandLineOption.h  CommandLineOption.ipp  CommandLineParser.h  CommandLineParser.ipp  CommandLineParserBuilder.h  ProgressBar.h
include/genepy/exception/: Exception.h  exception_macros.h
include/genepy/log/: LogLevel.h  Logger.h  logging_macros.h
resources/cmake/: GenepyConfig.cmake.in
resources/cpp/: version.cpp.in
resources/nsis/: NSIS.definitions.nsh.in  NSIS.template.in
src/: CMakeLists.txt
src/application/: ApplicationPreferenceDirectory.cpp  ConsoleApplication.cpp  GuiApplication.cpp
src/cli/: CommandLineArgument.cpp  CommandLineArgumentValue.cpp  CommandLineOption.cpp  CommandLineParser.cpp  CommandLineParserBuilder.cpp  ProgressBar.cpp
src/exception/: Exception.cpp
src/log/: LogLevelFormatter.cpp  LogLevelFormatter.h  Logger.cpp
test/: CMakeLists.txt
test/installer/linux/debian/: Dockerfile  run_test_env.sh
test/src/: TestVersion.cpp  TestVersion.h  common.cpp  common.h
test/src/application/: TestApplicationPreferenceDirectory.cpp  TestApplicationPreferenceDirectory.h  TestConsoleApplication.cpp  TestConsoleApplication.h  TestGuiApplication.cpp  TestGuiApplication.h
test/src/cli/: TestCommandLineParser.cpp  TestCommandLineParser.h  TestProgressBar.cpp  TestProgressBar.h
test/src/cli/helpers/: commandlineparser_test_helper.cpp  progressbar_test_helper.cpp
test/src/exception/: TestException.cpp  TestException.h
test/src/log/: TestClassLogger.cpp  TestClassLogger.h  TestLocalLogger.cpp  TestLocalLogger.h  TestLogger.cpp  TestLogger.h
tools/batch/: SetupEnv.bat
